Add basic output for SPF and DMARC

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "cSpell.words": [
+        "BIMI",
         "DNSSEC",
-        "dotenv"
+        "dotenv",
+        "elif",
+        "endfor"
     ]
 }
