Add the BIMI guide

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,13 +16,16 @@
     "dotenv",
     "elif",
     "endfor",
+    "Fastmail",
     "FEFF",
+    "Mailchimp",
     "noindex",
     "referrerpolicy",
     "STARTTLS",
     "stylesheet",
     "TLSA",
     "urlset",
+    "Valimail",
     "venv",
     "webp",
     "ZWNJ",
