Add SPF details

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,7 @@
   "editor.formatOnSave": true,
   "cSpell.words": [
     "BIMI",
+    "bounceback",
     "DNSSEC",
     "domaincheckup",
     "dotenv",
