Add DMARC guide

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,19 +10,23 @@
   },
   "editor.formatOnSave": true,
   "cSpell.words": [
+    "afrf",
     "BIMI",
     "bounceback",
     "DNSSEC",
     "domaincheckup",
     "dotenv",
+    "EHLO",
     "elif",
     "endfor",
     "Fastmail",
     "FEFF",
+    "HELO",
     "HSTS",
     "Mailchimp",
     "noindex",
     "referrerpolicy",
+    "selectattr",
     "STARTTLS",
     "stylesheet",
     "TLSA",
