Better DMARC guide

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,7 +10,9 @@
   },
   "editor.formatOnSave": true,
   "cSpell.words": [
+    "adkim",
     "afrf",
+    "aspf",
     "BIMI",
     "bounceback",
     "crowdstrike",
